# koina

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  cliff.toml  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml  release.yml  scorecard.yml  zizmor.yml
assets/brand/: .gitignore  README.md
examples/: _agent.py  _agent_openai.py  review_bash.py  review_multi.py  review_openai.py  review_readonly.py
src/koina/: __init__.py  _ripgrep.py  calls.py  context.py  observability.py  registry.py  tool.py
src/koina/adapters/: anthropic.py  openai.py
src/koina/tools/: bash.py  edit.py  glob.py  grep.py  read.py  write.py
tests/: test_adapter_anthropic.py  test_adapter_openai.py  test_bash.py  test_calls.py  test_core.py  test_dispatch.py  test_edit.py  test_example_bash.py  test_example_multi.py  test_example_openai.py  test_example_review.py  test_glob.py  test_grep.py  test_integration.py  test_observability.py  test_read.py  test_write.py
