[project]
name = "koina"
version = "0.1.0"
description = "An agentic toolset: provider-neutral tools and dispatch for building agents on low-level LLM SDKs"
readme = "README.md"
authors = [
    { name = "Geoffrey Guéret", email = "geoffrey@gueret.dev" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["agents", "agentic", "llm", "tool-use", "function-calling", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
examples = [
    "anthropic>=0.105.2",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/ggueret/koina"
Repository = "https://github.com/ggueret/koina.git"
Documentation = "https://github.com/ggueret/koina#readme"
Issues = "https://github.com/ggueret/koina/issues"
Changelog = "https://github.com/ggueret/koina/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = ".cache/pytest"

[tool.ruff]
line-length = 88
target-version = "py312"
cache-dir = ".cache/ruff"

[tool.mypy]
python_version = "3.12"
strict = true
cache_dir = ".cache/mypy"
